feature: rabbitmq docker-compose for deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 version: "3"
 services:
-  rabbitmq:
+  rabbitmql:
     image: rabbitmq:3-management
+    hostname: 'dev-rabbitmq'
     ports:
       - "5672:5672"
       - "15672:15672"
+    container_name: 'project-rabbitmq'
+    restart: always
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
       RABBITMQ_DEFAULT_VHOST: mdas-api
-      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_management listener [{port,15672},{ip,\"172.22.0.3\"}]"
     volumes:
-      - ./rabbitmq:/var/lib/rabbitmq
+      - ./rabbitmq:/var/lib/rabbitmq/
     networks:
       - my-network
 
@@ -20,7 +22,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_HOST: dev-rabbitmq
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
