--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,12 @@ services:
 
   spring-boot-app:
     build: .
+    depends_on:
+      - rabbitmql
     ports:
       - "8080:8080"
     environment:
-      SPRING_RABBITMQ_HOST: dev-rabbitmq
+      SPRING_RABBITMQ_HOST: rabbitmql
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
