--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>1.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.13.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
