--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.error.include-message=always
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=host.docker.internal
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
